*Empty MediaWiki Message*

--- a/فېروز_خان_اپريدی.mw
+++ b/فېروز_خان_اپريدی.mw
@@ -1,1 +1,423 @@
-#REDIRECT [[د کارونکی:Feroz khan afridi]]
+[[Image:FerozAfridi.PNG|thumb|300px|فېروز خان اپريدی]]
+'''فيروز خان اپريدی''' (۱۹۶۰) د انټرنېشنل پشتون فاونډېشن پخوانی صدر، يو پښتون شاعر، اديب او د اباسين هنري ټولنې (Abasin Arts Council) غړی هم دی. نوموړی په پښتونخوا کې د نوم خاوند دی. د ده شعرونه د پښتونخوا د ګڼو سندرغاړو له خوا په سندرو کې وييل شوي او د نوموړي ډېرې ليکنې د پښتونخوا او د پاکستان په رسنيو کې خپرې شوي دي. د ده د شعرونو او ليکنو سره ګڼ شمېر خلک اشنا دي. 
+
+== مخينه ==
+ښاغلی اپريدی د حاجي لعل خان ځوی دی او په ۱۹۶۰ ز. کال، په پښتونخوا کې د خيبر ايجنسۍ د باړې د سپين قبر په كلي کې نړۍ ته سترګې رڼې کړي او د همدې ځای اوسيدونکی دی. نوموړی په ۱۹۸۴ ز. كال كې د قطر هېواد ته تللی دی او دا وخت هملته اوسيږي. 
+
+د زدکړې پر مهال د تاتاره سټوډنټس يونين مشر پاتې شوی دی. په اوسني وخت کې د ډېرو نورو ټولنو مشر هم پاتې شوی دی.
+
+==زدکړې==
+هغه خپلې لومړنۍ زدکړې د خيبر ايجنسۍ په سيمه ايزو ښوونځيو کې سر ته رسولي دي. د خپلو لوړو زده کړو پيل يې د لنډي کوتل په دولتي پوهنځي (ګورنمنټ کالج لنډي کوتل) کې کړی او بيا وروسته يې د پېښور پوهنتون نه په ادبياتو کې بری ليک ترلاسه کړی. د زدکړو وروسته يې په ګن شمير علمي او تخنيکي سيمينارونو او غونډو کښې ګډون کړی دی.
+
+==دندې==
+
+=== ټولنيزې ===
+
+فيروز افريدي په کال 1983 کې د خپل کلي په باړه بازار کې په يوه درملتون کې څه موده کار کړی او وروسته يې په باړه کجهورۍ کې خپله لومړنۍ رسمي دنده د يوه ښوونکي په توګه سر ته رسولې. د ښوونکي دغه دنده يې د خپل پوهنيز او ادبي لېوالتيا د راپارولو لپاره ډيره ګټوره، په زړه پورې او د خپلې خوښې وګڼله. 
+فيروز خان اپريدی د الرضا ټريډنګ كنټريكټنګ كمپنۍ جنرل منيجر هم پاتې دی او نن صبا هم په دغه کمپنئ په مرکزي مکتب کښې د سينئر سيلز مينجر په حيث کار کوي.
+د خپل وظيفې پرته د موفاتکو ټريډينګ اينډکنټريکټينګ پو نوم يوه خپله کمپنئ هم جوړه کړې ده ،چې د فيروز افريدي په مشرئ کښې د هغه ځامن محمد شير خان او امجدعلي خان ئې مديران دي.
+
+=== سياسي === 
+د دې پرته د اردو تنظيم پاک يوت سوسائټي نائب صدر هم تر نن پورې په مستقل توګه راروان دی.
+په سياسې توګه د پاکستان مسلم ليګ سره ئې اړيکې وې او په کال 1992 کښې په قطر کښې په اولينې ځل جوړ شوي تنظيم پاکستان مسلم وئيلفئر ليګ باني جنرال سيکريټري اټاکل شو او تر کال 2009 پورې ئې دا دنده تر سره کړه او نن محال د دغه تنظيم د دسرپرستې جرګې غړې دی
+
+=== ادبي === 
+فيروز افريدي په قطر کښې بېلابېلې دندې تر سره کړې دي.
+په کال ۱۹۹۲ کښې د پاک پښتو ادبي ټولنې جنرل سيکرټري او بيا په کال 1993 کښې هم د دغه ادبي تنظيم صدر تر کال 2007 پورې پاتې شوې دی.
+ن صبا د دغه تنظيم د سرپرست کميټئ غړې دی.
+
+په اكتوبر كال ۲۰۰۲ کښې دنړېوال پښتون فاونډيشن صدر وټاكل شو.د دغه تنظيم مقصد په انټرنيټ پښتانه راغونډول وو او د دوئي په مرسته په پښتونخوا لر او بر کښې په تعليمي مؤسسو، ښونځو، او پوهنتونونو کښې مالي مرسته کول او تکړه او نادره متعيلمينوته سکالرشپ ورکول وو.
+
+== سفرونه ==
+بيا څو مياشتې وروسته د يو پښتون ملګري عبدلستار ګردېزوال په مرسته او د هغه په ټینګار او خوښه د روښانه راتلونکي د لټون په تکل، د خليج شګلنې صحرا قطر هېواد ته ولاړو.
+دا د ستمبر د اوومې نيټې کال ۱۹۸۴ واقعه ده او د دوئي د د ژوند د اوږد سفر په باقاعده توګه اولينئ سفر وو.
+د دې نه وړاندې فيروز افريدي د متعليمئ په زمانه کښې د کابل، کراچي، لاهور، پينډئ کوئيټي او ايران کښې د زهدان، تهران،قم،اصفهان،شيراز،بندر بوشهر او بندر عباس سفرونه هم کړي وو.
+
+== ادبي ژوند ==
+د علم او ادب سره د بې کچه مينې ،او د دې د پاره په عملي توګه په کار کې ونډه اخيستو له کبله د پاکستان سفير په اول ځل په کال ۱۹۹۸-۱۹۹۹ کې او نن صبا په دوئم ځل 2۰۰۸ کې په دويم ځل د پاكستان ايجوكيشن سنټر دوحه قطر د ګورنرانو د بورډ ممبر هم ټاکلی دی. نن صبا هم دغه بورډ ښه فغاله غړی دی.
+
+د بېلابېلو خپرندويه ادارو او رسنيو سره په مرکو کې فيروز اپريدي په بشپړ توګه د ژوند تر ټولو اهم مقصد په پښتنو کې د علم د پاره تل عمري کار کول ګرځولې دی.
+او دائې وئيلى دى چې زه به دتعليم د عام كولو دپاره خپلې ټولې وسيلې وکاروم.
+دوئ دا هم وويل ،چې پاك پښتو ادبى ټولنه په قطر کې په كال ۱۹۸۴ کې جوړه شوې ده او زما په نګرانۍ کښې ئې لسګونه كتابونه چاپ كړيدى.
+دوئ دا هم وويلي دي چې په عربستان کې دپښتو ژبې او ادب دپرمختګ دپاره ګڼې ټولنې كار كوى، چې پکې دوه په سعودى کې ، درې په بحرين اودغه څير په عرب عماراتو کې، او يوه رسمي او لويه ادبي ټولنه په قطر کې ده.
+فيروز افريدي د علم او ادب زده کړه د انساني تمدن د پاره ډير مهمې ګڼي. فيروز افريدي په دا حقله د ميډيا او رسنيئو کار هم ډير مهم بولي.
+دوئي زياته کړه چې په عربو هيوادونو کې د عربيه او الجزيره داسې تلي ويژني چينلې دي چې دخلقو سترګې ئې غړولى دى. د پښتنو د پاره د عربستان نه محلي بله کومه داسې د ابلاغ زريعه نشته چي د پښتنو د شخړو او ستونزو په حقله اواز اوچت کړي.
+د اردو ورځپاڼې اوس اوس دعربو عماراتو او سعودي نه چاپ كيږى. خو دا کله بندې شي او کله بيرته خپرول پئيل کړي.
+ځكه چې ددې ورځپاڼو سرپرستانو ته سختې مالي مسئلې پيښې دى.
+ورځپاڼې او ټيلى ويژنونه د پښتنو ادبى او ثقافتى پروګرامونه چاپ كوى او خپروى.
+دا شان په پاكستان کې فرنټير پوسټ، سټيټسمين، خيبر ميل، مشرق وحدت، او ګ شمير اردو او پښتو خبرونه او مجلې زمونږ د سماجي او ادبي هلو ځلو خبرونه خپروي. فيروز افريدي دا هم ا وويل چې خليج کې ډير زرداره پښتانه اوسيږى خو څوك هم د پښتو تيلويزيون کوم چينل شروع كولو قدم نه شى پورته كولی. او زه دا ويره كوم چې پښتانه خو وړاندې نه ځى خو كيدلائ شى چې دپښتنو نه علاوه نور څوك په دې لړ کې را وړاندې شى.
+د خيبر تيليويزيون مثال د ټولو وړاندې دی. چې مالکان ئې غير پښتانه دي.
+
+فيروز افريدي د پښتونخوا نه خپريدونکې مجلو کې خپله ونډه اخلي او ورسره مالي کومکونه هم کوي.
+فيروز د اباسين ارټس کونسل غړي هم دی.
+
+== چاپ شوي آثار ==
+
+
+== ناچاپه آثار ==
+
+
+==د شعرونو  بېلګې==
+
+
+'''نظم''' 
+
+
+پښتون سندره
+
+راځئ چې يا قربان کړو نن سندره د پښتنون
+
+سندره د پښتون
+
+چې وکړو پکې ذکر او خبره د پښتون
+
+خبره د پښتون
+
+راځئ چه پکښې وستايو تاريخ د لوئ خيبر
+
+راځئ چه پکښې ياد کړو اشنغر او پښاور
+
+ايلم پکښې ښکاره کړو ملاکنډ پکښې په سر
+
+د سوات او د مردان پکښې تکرار وکړو اکثر
+
+تاريخ پکښې ګواه کړو ښه په نره د پښتون
+
+په نره د پښتون
+
+چه وکړو پکښې ذکر او خبره د پښتون
+
+خبره د پښتون
+
+
+راځئ چی لږ ور تير شو د کوهاټ نه تر ګومل
+
+د حسن ګل خو کورمې دی ټومبلي په اوربل
+
+جنوب د پښتونخوا کښې شاړې غرونه او ځنګل
+
+د کوئټې او چمن خلق ځا رېږي يو تر بل
+
+دا خاوره ده تر مښکو معطره د پښتون
+
+معطره د پښتون
+
+چه وکړو پکښې ذکر او خبره د پښتون
+
+خبره د پښتون
+
+
+په بره پښتونخوا کې شرق ته پروت دې ننګرهار
+
+کابل دۍ که غزني دې که پکتيا که قندهار
+
+د ټولو پښتنو افغانستان دې مور او پلار
+
+که لر دې او که بر دې يو ئې نوم يو افتخار
+
+نامه ده په نړۍ کې منوره د پښتون
+
+منوره د پښتون
+
+چې وکړو پکښې ذکر او خبره د پښتون
+
+خبره د پښتون
+
+
+
+
+په دې خاوره پيدا دې ايمل خان او دريا خان
+
+د تورې او قلم خاوند يادېږي خوشحال خان
+
+که يو طرف ته ګورې مبارز دې پير روښان
+
+په بل طرف بلبل د شاعرانو دې رحمان
+
+په هر لحاظ ده خاوره بختوره د پښتون
+
+بختوره د پښتون
+
+چې وکړو پکې ذکر او خبره د پښتون
+
+خبره د پښتون
+
+
+
+
+په هر زمان پېدا دې په دې خاوره ښه ځوانان
+
+د تورې غږ ختلي ئې په هند او په ايران
+
+احمد دې که اېپي دې که ښاغلې پادشاه خان
+
+حاجي د ترنګزو دې که شنوارئ حمزه خان
+
+فيروزه ښه قيصه ده معتبره د پښتون
+
+معتبره د پښتون
+
+چې وکړو پکښې ذکر او خبره د پښتون
+
+خبره د پښتون
+
+
+
+'''غزل'''
+
+جوړې د زړۀ پۀ کنډاؤنو مې لوخړې نه کړې
+
+ګرانه! د عشق د کلي ورانې مې جونګړې نه کړې
+
+
+کۀ هر څو ډېر لرې ئې، ډير درباندې زۀ ډاډه يم
+
+چرته د ډاډ دا شيش محل مې دړې وړې نه کړې
+
+
+نن بۀ رقيب ته ستا پۀ کسو کښې خپل ځان ښايمه
+
+نن آئينې چې د انکار پۀ دُوړو خړې نه کړې
+
+
+مونږه تکل د پاکې مينې د مزل کړے دے
+
+نفسه! پۀ لار چې د هوس جوړې چقړې نه کړې
+
+
+ما هم د عشق د جالې نوے نوے پر وهلے
+
+باده! وړې وړې وزرې مې پرخړې نه کړې
+
+
+خپلې دې ورکې کړه فیروزه چې دې حق ادا شي
+
+هيرې د نورو چې وړې وړې ښيګړې نه کړې
+
+
+'''نظم'''
+
+امن
+د ساحر لدهيانوي د نظم پښتو ژباړه سره د زياتوالي
+
+معززو شريفانو انسانانو
+
+
+وينه خپله که د بل بدن توئيږي
+
+د ادم د نسل وينه ده بهيږي
+
+
+
+جنګ خو جنګ وي که په شرق وي که په غرب وي
+
+د دنيا د امن وينه به څڅيږي
+
+
+
+بم په کور که په سرحد باندې غورځيږي
+
+سل کورونه د روحونو پرې ورانيږي
+
+
+
+خپل پټي که د بل چا پټي سوزيږي
+
+لوږي تندې به په هر لوري زياتيږي
+
+
+دا ټينکونه چې په وړاندې وروستو کيږي
+
+د وطن زمکې په شاړو کښې بدليږي
+
+
+څوک سندرې د بري څوک د غم ساندې
+
+ژوند په مړو باندې وير کوي ژړيږي
+
+
+جنګ په خپله يوه لويه مسئله ده
+
+په جنګونه مسئلې نه هوا ريږي
+
+
+اور او وينه به څه درکړي انسانانو
+
+مختاجي او لوږه نوره سيوا کيږي
+
+
+معززو شريفانو انسانانو
+
+جنګ به نکړو جنګ کښې هر څه تباه کيږي
+
+
+چي رڼا زما او ستا په کور کښي راشي
+
+دا د امن شمع پريږدئ چې بليږي
+
+
+د خپل ځان د زبادولو په خاطرنن
+
+ضروري نه ده انسان د چې قتليږي؟
+
+
+که د کور تورو تيارو ته رڼا غواړئ
+
+ضروري نه ده چې کور د سوزل کيږي
+
+
+جنګ په نورو سنګرونو هم کول شي
+
+ضروري نه ده چې وينه د توئيږي
+
+
+د ژوندون په مخ د عقل سترګې هم شته
+
+ليونتوب د پکښي هر وخت نه غړيږي
+
+راشئ ورکې دا تيارې د بد بختئ کړئ
+
+مشالونه د فکرونو د بليږي
+
+
+ځئ چې جنګ وکړو د هغه بلاګانو
+
+چې د امن د کارون مخې ته کيږي
+
+
+جنګ د داسې تفرقو سره چې وکړو
+
+اتحاد په امن نور هم سيوا کيږي
+
+
+چې وحشت او بربريت سره جنګ وکړو
+
+چې په امن د تهذ يب لمن پلنيږي
+
+
+جنګ د وشي د مرګي د سياست سره
+
+د انسان بقا د امن په سر کيږي
+
+
+جنګ د لوږې ،غريبئ سره د وشي
+
+چې د ژوند د خوږو خوند په سيوا کيږي
+
+
+د بې لارو وکدارانو جنګ پکار دے
+
+چې په امن د بې وسو ځان خلاصيږي
+
+
+جنګ د وشي د زردارو ستمګرو
+
+چې غلام د غلامئ نه ازاديږي
+
+
+جنګ د هغې فلسفې سره د وشي
+
+چې د امن د خيالونو سره جنګيږي
+
+
+ځان له داسې دنيا جوړه کړو د مينې
+
+چې د امن فرشتې پکښ اوسيږي 
+
+
+'''غزل'''
+
+په صفت د څوک مکين د پاس اسمان کړو
+
+څوک په نفس د را بهر د خلد مکان کړو
+
+
+چې انا او ضد دې مل زما افغان کړو
+
+خدايه پاکه ژوند دې ډير راته اوس ګران کړو
+
+
+دا زما د خپله لاسه په ما کيږي
+
+چي زما غلام د نن زما سلطان کړو
+
+
+دا د خپلو خطاګانو سزا مو مي
+
+پښتنو چې خپل وطن د جنګ ميدان کړو
+
+
+نور د صبرد زغملو توان مو نيشته
+
+ډير دې اوږد دا د صبر امتحان کړو
+
+
+پاکه خدايه ستا په لوئي کرم به کيږي
+
+په دا خپل تدبير کښي پاتې د انسان کړو
+
+
+لويه خدايه بس د امن دعا غواړم
+
+د فيروز دې که پوره دغه ارمان کړو
+
+
+'''نظم'''
+پيرزوئينې....
+د وطـــــــــــــــــــن د شائيسته پيغلې په نوم...په لرې وطنونه اباده
+
+
+پښتنه پيغله ملاله
+
+بې نظيره بې مثاله
+
+په تيارو کښې بل مشاله
+
+سوزيدلو کښې خوشحاله
+
+
+مسيحا وي د غمجنو
+
+مسيحا وي د بد حاله
+
+د بې وسو په تندي پاس
+
+د اميد د جبين خاله
+
+د مئين د زړه په دشته
+
+لکه پرخه پشکاله
+
+ننداره د حسن ځارو
+
+خائيسته بدري جماله
+
+
+په بادونو د خزان کښې
+
+د سپرلي د مستئ ټاله
+
+خپلې خاورې لره فخر
+
+خپلې ژبي لره سياله
+
+
+چې زوال نه لري داسې
+
+لازواله با کماله
+
+خدائي ورکړي چې سيرت دے
+
+خپل پردي دي ترې خوشحاله
+
+
+د پښتون حسن په عشق کښې
+
+فيروز هم په کښې ليواله
+
+== باندنۍ تړنې ==
+
+[http://www.afridi.destaar.com دفيروز افريدي ويبلاګ]
+
+
+[[وېشنيزه:پښتانه شاعران]]
