*Empty MediaWiki Message*

--- a/هندو_هېوادونه.mw
+++ b/هندو_هېوادونه.mw
@@ -7,7 +7,7 @@
 د هېوادونو د هندو توكم وګرشمېره د امريكا د بهرنويو چارو وزارت د سروې څخه اخيستل شوې.
 
 
-[[Image: Hinduism_percentage_by_country.png|right|400px|thumb|[[هندوييزم د هېواد په شمېره|'''Hinduism – سلنه د هېواد په حساب''']]]]
+[[انځور: Hinduism_percentage_by_country.png|left|350px|thumb|[[هندوييزم د هېواد په شمېره|'''Hinduism – سلنه د هېواد په حساب''']]]]
 {{Hinduism small}}
 '' د نړيوال مذهبي خپلواكۍ رپورټ ۲۰۰۶زېږد ''.[http://www.state.gov/g/drl/rls/irf/] نورې سرچينې د سي.آي.اې نړيوال كتاب [https://www.cia.gov/library/publications/the-world-factbook/] او adherents.com.[http://www.adherents.com/Na/Na_298.html#1868] د هر هېواد ټوليزه شمېره د census.govڅخه اخيستل شوې [http://www.census.gov/cgi-bin/ipc/idbrank.pl] ([[2007]] estimates).
 
