--- a/هندو_هېوادونه.mw
+++ b/هندو_هېوادونه.mw
@@ -1,4 +1,4 @@
-د هندو هېوادونو څخه هغه هېواونه مراد دي، چې ډېركي وګړي يې ددې [[مذهب]] لارويان وي. د هند د نيمې وچې زياتره هېوادونه د هندو مذهب لارويان دي. نن سبا د [[هندويزم]] مذهب د نړۍ درېيم [[مذهب]] ګڼل كېږي، چې د لارويانو شمېره يې نږدې يو بېليون ته رسېږي، چې له دېډلې څخه يې ۹۰۵ مېليونه په هند او نېپال كې اوسېږي. 
+د هندو هېوادونو څخه هغه هېواونه ګڼل کېږي، چې ډېركي وګړي يې ددې [[مذهب]] لارويان وي. د هند د نيمې وچې زياتره هېوادونه د هندو مذهب لارويان دي. نن سبا د [[هندويزم]] مذهب د نړۍ درېيم [[مذهب]] ګڼل كېږي، چې د لارويانو شمېره يې نږدې يو بېليون ته رسېږي، چې له دېډلې څخه يې ۹۰۵ مېليونه په هند او نېپال كې اوسېږي. 
 نور هغه هېوادونه چې په ډېره كچه [[هندوان]] پكې اوسېږي، عبارت دي له: [[پاكستان]]، [[سريلنكا]]، [[اندونېزيا]]، [[مالېزيا]]، [[سېنګاپور]]، [[موروكو]]، [[فيجي]]، [[ګيانا]]، [[ترينيډېډ]]، او [[توباګو]]، څخه
 
 ''د نړيوال مذهبي خپلواكۍ رپورټ ۲۰۰۶زېږد''[http://www.state.gov/g/drl/rls/irf/] نورې سرچينې د سي.آي.اې نړيوال كتاب[https://www.cia.gov/library/publications/the-world-factbook/] او adherents.com.[http://www.adherents.com/Na/Na_298.html#1868] د هر هېواد ټوليزه شمېره د census.govڅخه اخيستل شوې[http://www.census.gov/cgi-bin/ipc/idbrank.pl] ([[2007]] estimates).
