*Empty MediaWiki Message*

--- a/کونړ_ولايت.mw
+++ b/کونړ_ولايت.mw
@@ -120,6 +120,7 @@ Compounding the problems of the province is an extensive criminal trade in smugg
 [[Category:افغانستان]]
 [[Category:د افغانستان ښارونه]]
 
+[[bg:Конар]]
 [[ar:ولاية كنر]]
 [[ast:Konar]]
 [[de:Kunar]]
