--- a/فېروز_خان_اپريدی.mw
+++ b/فېروز_خان_اپريدی.mw
@@ -33,6 +33,8 @@
 دا د ستمبر د اوومې نيټې کال ۱۹۸۴ واقعه ده او د دوئي د د ژوند د اوږد سفر په باقاعده توګه اولينئ سفر وو.
 د دې نه وړاندې فيروز افريدي د متعليمئ په زمانه کښې د کابل، کراچي، لاهور، پينډئ کوئيټي او ايران کښې د زهدان، تهران،قم،اصفهان،شيراز،بندر بوشهر او بندر عباس سفرونه هم کړي وو.
 
+بياد قطر تللو  وروستو د عرب امارت دبئ ابوظهبئ،شارجه،بحرين  او د سعودي عرب سفرونه څو څو کرته  هم کړي دي.
+
 == ادبي ژوند ==
 د علم او ادب سره د بې کچه مينې ،او د دې د پاره په عملي توګه په کار کې ونډه اخيستو له کبله د پاکستان سفير په اول ځل په کال ۱۹۹۸-۱۹۹۹ کې او نن صبا په دوئم ځل 2۰۰۸ کې په دويم ځل د پاكستان ايجوكيشن سنټر دوحه قطر د ګورنرانو د بورډ ممبر هم ټاکلی دی. نن صبا هم دغه بورډ ښه فغاله غړی دی.
 
