/* چاپ شوي آثار */

--- a/فېروز_خان_اپريدی.mw
+++ b/فېروز_خان_اپريدی.mw
@@ -55,6 +55,10 @@
 
 == چاپ شوي آثار ==
 
+فيروز افريدي په قطر کښې يو اوږد عمر د پښتو ادب د پرمختګ او روزنې د پاره بي کچه خدمتونه کړي دي.
+هغوئي په خپل خرڅ د ګنو چاعرانو کتابونه چاپ کړي دي.او بيا په ورورستو ئې د خپلو ملګرو په کومک د پښتو ژبې دوه مياشريزه مجله دستار انټرنشنيل په نامه هم اجرا کړې ده چې تر اوسه د پښاور نه خپريږي
+.په خپله ئې تر اوسه دوه کتابونه تاليف کړي دي.
+چې  يو د قطر پښتو  ادبي ټولې د شاعرانو او اديبانو شعري مجموعه(تزکره) جګې شملې د شريک مولف په توګه او بل د پروفيسر سلمې شاهين د پښتنو ښځو شاعرانو په حقله ليکلې يو اردو مضمون ته کتابي سکل ورکړې دے.او د قطر نه ئې خپور کړې دے.
 
 == ناچاپه آثار ==
 
