--- a/فېروز_خان_اپريدی.mw
+++ b/فېروز_خان_اپريدی.mw
@@ -61,7 +61,7 @@
 چې  يو د قطر پښتو  ادبي ټولې د شاعرانو او اديبانو شعري مجموعه(تزکره) جګې شملې د شريک مولف په توګه او بل د پروفيسر سلمې شاهين د پښتنو ښځو شاعرانو په حقله ليکلې يو اردو مضمون ته کتابي سکل ورکړې دے.او د قطر نه ئې خپور کړې دے.
 
 == ناچاپه آثار ==
-
+ناچاپه اثار ئې په منظوم او منثور دواړو بيلګو کښې شته چې ډير زر به د چاپ په بڼه مزي کړي.
 
 ==د شعرونو  بېلګې==
 
