*Empty MediaWiki Message*

--- a/د_لمريز_کال_مياشتې.mw
+++ b/د_لمريز_کال_مياشتې.mw
@@ -5,7 +5,6 @@
 
 {| class="wikitable"
 ! پښتو || دري || پارسي || [[کردي]] || د ورځو شمېر
-
 |-
 |[[وری]]
 |[[حمل]]
@@ -49,31 +48,31 @@
 |
 |۳۰
 |-
-|[[لرم]]
+|[[لړم]]
 |[[عقرب]]
 |[[آبان]]
 |
 |۳۰
 |-
-|ليندی
+|[[ليندۍ]]
 |[[قوس]]
 |[[آذر]]
 |
 |۳۰
 |-
-|مرغومی
+|[[مرغومی]]
 |[[جدی]]
 |[[دی]]
 |
 |۳۰
 |-
-|سلواغه
+|[[سلواغه]]
 |[[دلو]]
 |[[بهمن]]
 |
 |۳۰
 |-
-|كب
+|[[كب]]
 |[[حوت]]
 |[[اسفند]]
 |
@@ -81,6 +80,5 @@
 |-
 |}
 
-{{خرد}}
 
 [[وېشنيزه:لمريزې مياشتې]]
