*Empty MediaWiki Message*

--- a/د_لمريز_کال_مياشتې.mw
+++ b/د_لمريز_کال_مياشتې.mw
@@ -6,73 +6,73 @@
 {| class="wikitable"
 ! پښتو || دري || پارسي || [[کردي]] || د ورځو شمېر
 |-
-|[[وری]]
+|[[وری(مياشت)|وری]]
 |[[حمل]]
 |[[فروردین]]
 |
 |۳۱
 |-
-|[[غویی]]
+|[[غویی(مياشت)|غویی]]
 |[[ثور]]
 |[[اردیبهشت]]
 |
 |۳۱
 |-
-|[[غبرګولی]]
+|[[غبرګولی(مياشت)|غبرګولی]]
 |[[جوزا]]
 |[[خرداد]]
 |
 |۳۱
 |-
-|[[چنګاښ]]
+|[[چنګاښ(مياشت)|چنګاښ]]
 |[[سرطان]]
 |[[تیر (ماه)|تیر]]
 |
 |۳۱
 |-
-|[[زمری]]
+|[[زمری(مياشت)|زمری]]
 |[[اسد]]
 |[[امرداد]]
 |
 |۳۱
 |-
-|[[وږی]]
+|[[وږی(مياشت)|وږی]]
 |[[سنبله]]
 |[[شهریور]]
 |
 |۳۱
 |-
-|[[تله]]
+|[[تله(مياشت)|تله]]
 |[[میزان]]
 |[[مهر (ماه)|مهر]]
 |
 |۳۰
 |-
-|[[لړم]]
+|[[لړم(مياشت)|لړم]]
 |[[عقرب]]
 |[[آبان]]
 |
 |۳۰
 |-
-|[[ليندۍ]]
+|[[ليندۍ(مياشت)|ليندۍ]]
 |[[قوس]]
 |[[آذر]]
 |
 |۳۰
 |-
-|[[مرغومی]]
+|[[مرغومی(مياشت)|مرغومی]]
 |[[جدی]]
 |[[دی]]
 |
 |۳۰
 |-
-|[[سلواغه]]
+|[[سلواغه(مياشت)|سلواغه]]
 |[[دلو]]
 |[[بهمن]]
 |
 |۳۰
 |-
-|[[كب]]
+|[[كب(مياشت)|كب]]
 |[[حوت]]
 |[[اسفند]]
 |
