--- a/انسلم.mw
+++ b/انسلم.mw
@@ -270,26 +270,26 @@ The main primary sources for the history of St. Anselm and his times are [[Eadme
 |PLACE OF DEATH=Canterbury, Kent
 }}
 {{DEFAULTSORT:Anselm of Canterbury}}
-[[Category:1033 births]]
-[[Category:1109 deaths]]
-[[Category:Christian theologians]]
-[[Category:Archbishops of Canterbury]]
-[[Category:Late 11th century Roman Catholic archbishops]]
-[[Category:12th century Roman Catholic archbishops]]
-[[Category:Benedictines]]
-[[Category:English saints]]
-[[Category:Doctors of the Church]]
-[[Category:English people of Italian descent]]
-[[Category:Italian saints]]
-[[Category:People celebrated in the Lutheran liturgical calendar]]
-[[Category:People from Aosta Valley]]
-[[Category:Roman Catholic saints]]
-[[Category:Scholastic philosophers]]
-[[Category:French abbots]]
-[[Category:12th century Christian saints]]
+[[وېشنيزه:د ۱۰۳۳ زېږېدنې]]
+[[وېشنيزه:د ۱۱۰۹ مړينې]]
+[[وېشنيزه:Christian theologians]]
+[[وېشنيزه:Archbishops of Canterbury]]
+[[وېشنيزه:Late 11th century Roman Catholic archbishops]]
+[[وېشنيزه:12th century Roman Catholic archbishops]]
+[[وېشنيزه:Benedictines]]
+[[وېشنيزه:English saints]]
+[[وېشنيزه:Doctors of the Church]]
+[[وېشنيزه:English people of Italian descent]]
+[[وېشنيزه:Italian saints]]
+[[وېشنيزه:People celebrated in the Lutheran liturgical calendar]]
+[[وېشنيزه:People from Aosta Valley]]
+[[وېشنيزه:Roman Catholic saints]]
+[[وېشنيزه:Scholastic philosophers]]
+[[وېشنيزه:French abbots]]
+[[وېشنيزه:12th century Christian saints]]
 
-[[category:لوديځ فيلسفوفان]]
-[[category:فلسفه]]
+[[وېشنيزه:لوديځ فيلسفوفان]]
+[[وېشنيزه:فلسفه]]
 
 [[az:Kenterberili Anselm]]
 [[bg:Анселм Кентърбърийски]]
