--- a/د_غزنويانو_ټولواکمني.mw
+++ b/د_غزنويانو_ټولواکمني.mw
@@ -131,11 +131,9 @@ The Ghaznevid Empire was the first significant Islamic empire in Central Asia{{F
 
 *{{1911}}
 
-[[Category:د غزنويانو سلطنت| ]]
-[[Category:963 establishments]]
-[[Category:1187 disestablishments]]
-[[Category:Empires and kingdoms of India]]
-[[Category:د ترکانو تاريخ]]
+[[وېشنيزه:د غزنويانو سلطنت| ]]
+[[وېشنيزه:د هند امپراتورۍ او پاچاهۍ]]
+[[وېشنيزه:د ترکانو تاريخ]]
 
 {{Link FA|ur}}
 
