--- a/ملګري_ملتونه.mw
+++ b/ملګري_ملتونه.mw
@@ -285,10 +285,10 @@ Similar-themed World or Galactic Bodies that model the UN in some way include:
 
 {{United Nations}}
 
-[[Category:United Nations|*]]
-[[Category:International organizations]]
-[[Category:Nobel Peace Prize winners]]
-[[Category:1945 establishments]]
+[[وېشنيزه:ملګري ملتونه|*]]
+[[وېشنيزه:نړېوال تنظيمونه]]
+[[وېشنيزه:د نوبل د سولې جايزې ګټونکي]]
+[[وېشنيزه:د ۱۹۴۵ بنسټ ايښودنې]]
 
 {{Link FA|nl}}
 {{Link FA|th}}
