--- a/گرو_نانک.mw
+++ b/گرو_نانک.mw
@@ -149,17 +149,17 @@ On [[22 September]] [[1539]], aged 70, Guru Nanak met with his demise, after he 
 
 {{Sikhism}}
 
-[[category:فلسفه]]
-[[category:ختيځ فيلسفوفان]]
-[[category:هندي فيلسفوفان]]
-[[Category:1469 births]]
-[[Category:1539 deaths]]
-[[Category:هندو مذهبي لارښودان]]
-[[Category:انقلابيان]]
-[[Category:Sant Mat]]
-[[Category:سكهـ ګرو]]
-[[Category:Punjabi-language poets]]
-[[Category:د مذهبونو بنسټ اېښودونكي]]
+[[وېشنيزه:فلسفه]]
+[[وېشنيزه:ختيځ فيلسفوفان]]
+[[وېشنيزه:هندي فيلسفوفان]]
+[[وېشنيزه:د ۱۴۶۹ زېږېدنې]]
+[[وېشنيزه:د ۱۵۳۹ مړينې]]
+[[وېشنيزه:هندو مذهبي لارښودان]]
+[[وېشنيزه:انقلابيان]]
+[[وېشنيزه:Sant Mat]]
+[[وېشنيزه:سكهـ ګرو]]
+[[وېشنيزه:د پنجابي ژبې شاعران]]
+[[وېشنيزه:د مذهبونو بنسټ اېښودونكي]]
 
 [[an:Guru Nanak Dev]]
 [[ar:ناناك]]
