--- a/وری_(مياشت).mw
+++ b/وری_(مياشت).mw
@@ -1,6 +1,5 @@
-
 {{وری}}
 
-د [[د افغانستان رسمي کليز|افغانستان په رسمي کليز]] کې '''وری''' د د هجري لمريز کال لومړنۍ مياشت ده چې ۳۱ ورځې لري او د همدغې مياشت پيل له [[نوروز]] نه کېږي.
+د [[د افغانستان رسمي کليز|افغانستان په رسمي کليز]] کې '''وری''' د هجري لمريز کال لومړنۍ مياشت ده چې ۳۱ ورځې لري او د همدغې مياشت پيل له [[نوروز]] نه کېږي.
 
 {{لمريزې مياشتې}}
