*Empty MediaWiki Message*

--- a/وری_(مياشت).mw
+++ b/وری_(مياشت).mw
@@ -1,5 +1,5 @@
+{{دوري-کليز}}
 {{وری}}
-
 د [[د افغانستان رسمي کليز|افغانستان په رسمي کليز]] کې '''وری''' د هجري لمريز کال لومړنۍ مياشت ده چې ۳۱ ورځې لري او د همدغې مياشت پيل له [[نوروز]] نه کېږي.
 
 {{لمريزې مياشتې}}
