*Empty MediaWiki Message*

--- a/وری_(مياشت).mw
+++ b/وری_(مياشت).mw
@@ -2,3 +2,4 @@
 د [[د افغانستان رسمي کليز|افغانستان په رسمي کليز]] کې '''وری''' د هجري لمريز کال لومړنۍ مياشت ده چې ۳۱ ورځې لري او د همدغې مياشت پيل له [[نوروز]] نه کېږي.
 
 {{لمريزې مياشتې}}
+[[وېشنيزه:د لمريزو مياشتو کينډۍ]]
