*Empty MediaWiki Message*

--- a/غويی_(مياشت).mw
+++ b/غويی_(مياشت).mw
@@ -1,13 +1,5 @@
+{{غويی}}
+د [[د افغانستان رسمي کليز|افغانستان په رسمي کليز]] کې '''غويی''' د هجري لمريز کال دويمه مياشت ده چې ۳۱ ورځې لري.
 
-
-
-
-
-
-
-
-
-
-
-
+{{لمريزې مياشتې}}
 [[وېشنيزه:د لمريزو مياشتو کينډۍ]]
