*Empty MediaWiki Message*

--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -91,6 +91,7 @@
 [[Category:د افغانستان ولايتونه]]
 [[Category:افغانستان]]
 
+[[bg:Нангархар]]
 [[ar:ولاية ننكرهار]]
 [[ast:Nangarhar]]
 [[cy:Nangarhar]]
