*Empty MediaWiki Message*

--- a/نورستان_ولايت.mw
+++ b/نورستان_ولايت.mw
@@ -28,6 +28,7 @@
 [[Category:افغانستان]]
 [[Category:د افغانستان ښارونه]]
 
+[[bg:Нуристан]]
 [[ar:ولاية نورستان]]
 [[ast:Nurestán]]
 [[de:Nuristan]]
