--- a/ويکيپېډيا.mw
+++ b/ويکيپېډيا.mw
@@ -445,7 +445,7 @@ Jimmy Wales, the ''de facto'' leader of Wikipedia,<ref name="defactoleader">{{ci
 * {{cite journal |url=http://www.firstmonday.org/issues/issue12_8/nielsen/index.html |title=Scientific citations in Wikipedia |date=[[August 2007]] |journal=First Monday |volume=12 |issue=8 |accessdate=2008-02-22 |first=Finn Årup |last=Nielsen}}
 
 ==سرچينې==
-{{reflist|2}}
+{{reflist}}
 
 ==باندنۍ تړنې==
 {{Spoken Wikipedia|Wikipedia.ogg|2005-06-25}}
