--- a/عبدالله_عبدالله.mw
+++ b/عبدالله_عبدالله.mw
@@ -8,4 +8,5 @@
 [[de:Abdullah (Afghanistan)]]
 [[en:Abdullah (Afghanistan)]]
 [[es:Abdullah Abdullah]]
+[[pl:Abdullah Abdullah]]
 [[sv:Abdullah Abdullah]]
