--- a/پښتورکي.mw
+++ b/پښتورکي.mw
@@ -33,7 +33,7 @@ The kidneys receive unfiltered blood directly from the heart through the [[abdom
 *[[د ميتيازو غونډال]]
 
 ==سرچينې==
-{{reflist|2}}
+{{reflist|}}
 
 [[af:Nier]]
 [[ar:كلية (عضو)]]
