--- a/علي_احمد_جلالي.mw
+++ b/علي_احمد_جلالي.mw
@@ -19,3 +19,4 @@ U.S. Army War College, U.S. Naval Postgraduate School, Monterey, California, Com
 
 
 [[en:Ali Ahmad Jalali]]
+[[pl:Ali Ahmad Jalali]]
