--- a/اشرف_غني.mw
+++ b/اشرف_غني.mw
@@ -85,6 +85,10 @@
 
 == باندنۍ تړنې ==
 
+[[وېشنيزه:پښتانه سياستوال]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:د ولسمشرۍ کانديدان]]
+[[وېشنيزه:پښتانه ليکوالان]]
 
 [[en:Ashraf Ghani]]
 [[pl:Ashraf Ghani]]
