*Empty MediaWiki Message*

--- a/سرپل_ولايت.mw
+++ b/سرپل_ولايت.mw
@@ -9,6 +9,7 @@
 [[Category:د افغانستان ولايتونه]]
 [[Category:افغانستان]]
 
+[[bg:Сарипол]]
 [[ar:ولاية سربل]]
 [[de:Sar-i Pul (Provinz)]]
 [[en:Sar-e Pol Province]]
