*Empty MediaWiki Message*

--- a/محمد_افضل_ټکور.mw
+++ b/محمد_افضل_ټکور.mw
@@ -1,1 +1,23 @@
-[[Category: پښتانه شاعران]]
+ښاغلی افضل ټکور په کال ١٣٣٩ لمريز کال کي د ننګرهار ولايت د کوزکونړ ولسوالۍ دکوټۍ په کلي کي زېږيدلی دی .
+لومړنۍ زده کړي يې د خپل کلي په ښوونځی کښي تر سره کړي او په ١٣٥٧ لمريز کال دکونړ ولايت د کوز کنړ د ولسوالۍ د سيدجمال الدين د ليسې د دولسم ټولګی نه فارغ شوی او لوړي زده کړي يې د ننګرهار پوهنتون د انجنيرۍ په پوهنځی کي تر سره کړي دي . په کال ١٣٦٤ ل يې نوموړې پوهنځی پای ته ورسوله .
+
+== زده کړې ==
+
+د پوهنځی له فراغت وروسته يې د افغانستان د ليکوالو د ټولني سره په کار پيل وکړ ، په لومړيو کي د ژوندون مجلې مهتمم ، او  وروسته  د ١٣٧٦ ل کال څخه وروسته بيا د ډاکټر نجيب الله د حکومت تر ړنګېدو پوري  د نوموړي مجلې دمسول مدير په توګه پاته شو.
+ښاغلی ټکور د يوې مودې لپاره د انيس ورځپاڼي د ادبي مخ چي د نکريزو پاڼه نومېدله  چلوونکی و، وروسته د څو کالو لپاره د افغانستان راډيو ادبي خپرونه ( ولولې ) لپاره شعرونه او ... ليکلي دي ،  ددې ترڅنګ تر اوسه ( ١٣٨٣ ل ) پوري د لسګونو کتابونو اهتمام کړی ، په بېلابېلو خپرونو کي يې څېړنيزي مقالې خپرې شوي ، او بېلابېلو غونډو او سيمينارونو لپاره يې پر مختلفو موضوګانو څېړني مقالې کښلي دي .
+ښاغلی ټکور  د شپږو کالو راهيسي د خپلي کورنۍ سره په هالنډ کي مېشت دی .
+
+== چاپ شوي آثار ==
+ښاغلی ټکور د لاندنيو چاپي اثارو خاوند دی :
+ ١ _ دا ليکوال او دا څېرې ---  تذکره  --- -  بيهقي موسسې له خوا په کال ١٣٦٤ ل کابل
+دا د هغو ٩٠ تنو ليکوالو او شاعرانو تذکره ده چي د ارواښاد استاد بېنوا د  ( اوسني ليکوال ) تر پېژندګلوی وروسته يې علمي او ادبي کارونه کړي دي . دغه اثر په ٥٠٠ مخونو کي په ١٣٦٤ ل کال د بيهقي د نشراتي موسسې له  خوا په کابل کي خپور شوی دی .
+٢ _ ښکالو د پسرلو ---  شعري ټولګه ---  دپښتو ټولني چاپ  _   ١٣٦٥ ل کابل
+٣ _ د نظر غشي --- د سايل شعري ټولګه --- د قومونو او قبايلو وزارت چاپ _ ١٣٦٧ ل کابل
+د خوږ ژبي شاعر رحمت شا سايل د شعرونو غورچاڼ دی چي د ښاغلي ټکور له خوا ترتيب شوې  او سريزه پر ليکل شوېده  .
+٤ _ د هسک پېغله ---  د بېنوا شعرونه- --- د ليکوالو ټولني چاپ _  ١٣٦٨ ل کابل 
+د هسک پېغله د استاد بېنوا دهغو شعرونو ټولګه ده کوم چي په تيرو پنځوسو کلونو کي د هيواد په بېلابېلو خپرونو کي چاپ شوي دي . راټولونکی يې افضل ټکور دی .
+٥ _ پرهرونه ټکورونه- --- شعري ټولګه---- د ليکوالو ټولني چاپ _ ١٣٦٨ ل کابل
+٦ _ يو داغ يو ټکو---- شعري ټولګه------  په خپل لګښت چاپ  _ ١٣٧٤ ل پېښور
+
+
+[[وېشنيزه: پښتانه شاعران]]
