--- a/محمد_زرين_انځور.mw
+++ b/محمد_زرين_انځور.mw
@@ -30,3 +30,8 @@
 # د ثور په تراژيدۍ کې فرهنګ، ادبيات او ازادي ، پېښور، د ١٣٧٢ ل چاپ،
 # د صدر خوشال ژوند او اثار، پېښور، د ١٩٩٦ع چاپ .
 دښاغلي  زرين انځورپه سلګونو مقالې د هېواد په مطبوعاتو کې او دغه راز له هېواده بهر مطبوعاتو کې چاپ او خپرې شوې دي .
+
+
+
+[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه]]
