*Empty MediaWiki Message*

--- a/صفيه_حليم.mw
+++ b/صفيه_حليم.mw
@@ -1,2 +1,8 @@
-[[Category: پښتانه شاعران]]
-[[Category: پښتنې شاعرانې]]
+ميرمن صفيه حليم په پېښور کې زيږيدلې ده . د پېښور په پوهنتون کې يې زده کړي دي وروسته په هم هغۀ ښار کې د يوۀ ښوونځي ښوونکې وه خو د سکاټلينډ په يوه پوهنتون کې يې د نورو زده کړو لپاره بورس ترلاسه کړ .
+تر هغه وروسته په لندن کې د بي بي سي پښتو خپرونې ته راغله او تر ٢٠٠٣ کال پورې هلته وه چې په وروستۍو کلونو کې يې مشري هم په غاړه لرله .
+ميرمن حليم په پښتو ژبه لنډې کيسې او يو ناول کښلی دی . د دوی د لنډو کيسو دوه ټولګې چاپ شوي دي . د سيند باد په نامۀ يې د ماشومانو لپاره د فولکلوريکو کيسو يوه ژباړه هم چاپ کړې ده .
+د ښکلي کتاب په نامۀ يې د نثرونو يوه ښکلې مجموعه څو کاله وړاندې چاپ شوه . اغلې حليم اوس هم له بي بي سي سره په کارونو بوخته ده خو د پښتو په ډيرو خپرونو کې يې په پرله پسې توګه ليکنې خپريږي .
+
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتنې شاعرانې]]
+[[وېشنيزه:پښتانه ليکوالان]]
