--- a/ابو_سعيد_احمد_ساگزی.mw
+++ b/ابو_سعيد_احمد_ساگزی.mw
@@ -2,20 +2,20 @@
 
 == ليکلي آثار ==
 دده له آثارو څخه چې اوس پاته دي هغه دا دي.
-##کتاب في مساحة الاکر
-##کتاب الماخوذات لارشميدس
-##کتاب المدخل (په نجوم کې چې د ابو جعفر احمد بن محمد صفاري دپاره يې ليکلی و.)
-##کتاب المعانی فی احکام النجوم
-##کتاب الدلايل فی احکام النجوم
-##کتاب الاختيار د ابو معشر د «الالوف» له کتاب څخه چاڼ دی
-##منتخب کتاب المواليد چې د ابو معشر د «المواليد» څخه چاڼ شوی
-##تحصيل القوانين د هغو قوانينو په باب کې دی چې د نجومي پېښو په پوهېدلو کې منجم ورته اړتيا لري.
-##الجامع الشاهي چې د عضدالدوله ديلمی په نامه يې ليکلی و.
-##هغه ليک چې د «انقسام خط مستقيم ذي نهاية بنصفين» په باب کې يې محمد صفاري زوی ابو جعفر احمد ته ليکلی و.
-##هغه رساله چې د «عمل مثلث حاوي الزو ايامن خطين مستقيمين مختلفين» په باب کې يې د يمن د زوی نظيف دپاره ليکلی وه.
-##د «خواص الشکل المجسم الحادث من ادارة القطع الزايد والمکافی رساله»
-##رسالة فی اخراج الخطوط في الدواير الموضوعة من النقط المعطاة
-##رسالة في الجواب عن المسايل التي سيل في حل الاشکال الماخوذة من کتاب الماخوذات الارشميدس. او نور ...
+#کتاب في مساحة الاکر
+#کتاب الماخوذات لارشميدس
+#کتاب المدخل (په نجوم کې چې د ابو جعفر احمد بن محمد صفاري دپاره يې ليکلی و.)
+#کتاب المعانی فی احکام النجوم
+#کتاب الدلايل فی احکام النجوم
+#کتاب الاختيار د ابو معشر د «الالوف» له کتاب څخه چاڼ دی
+#منتخب کتاب المواليد چې د ابو معشر د «المواليد» څخه چاڼ شوی
+#تحصيل القوانين د هغو قوانينو په باب کې دی چې د نجومي پېښو په پوهېدلو کې منجم ورته اړتيا لري.
+#الجامع الشاهي چې د عضدالدوله ديلمی په نامه يې ليکلی و.
+#هغه ليک چې د «انقسام خط مستقيم ذي نهاية بنصفين» په باب کې يې محمد صفاري زوی ابو جعفر احمد ته ليکلی و.
+#هغه رساله چې د «عمل مثلث حاوي الزو ايامن خطين مستقيمين مختلفين» په باب کې يې د يمن د زوی نظيف دپاره ليکلی وه.
+#د «خواص الشکل المجسم الحادث من ادارة القطع الزايد والمکافی رساله»
+#رسالة فی اخراج الخطوط في الدواير الموضوعة من النقط المعطاة
+#رسالة في الجواب عن المسايل التي سيل في حل الاشکال الماخوذة من کتاب الماخوذات الارشميدس. او نور ...
 
 == ماخذونه ==
 
