--- a/محمد_شفيق_حقپال.mw
+++ b/محمد_شفيق_حقپال.mw
@@ -1,27 +1,24 @@
 [[Image:Haqpal.PNG|thumb|289px|محمد شفيق حقپال]]
-<font size="3" face="Pashto Kror Asiatype" ">
-ښاغلی محمد شفيق حقپال ( وردګ) دمحمد يونس زوى په لمريزهجري ١٣٤٤ كې دميدان وردګو ولايت دنرخ ولسوالۍ دكريمدادودقريې دمارخانې په كلي كې زيږيدلى .لومړنۍ اومنځنۍ زده كړي يې دكابل په سپين كلي ليسه كې نورى زده كړى يې دكابل د برېښنا د تخنيک په څانګه كې پاى ته رسولي دي .
+ښاغلی محمد شفيق حقپال ( وردګ) دمحمد يونس زوى په لمريزهجري ١٣٤٤ كې دميدان وردګو ولايت دنرخ ولسوالۍ دكريمدادودقريې دمارخانې په كلي كې زيږيدلى .
+
+== زده كړي ==
+لومړنۍ اومنځنۍ زده كړي يې دكابل په سپين كلي ليسه كې نورى زده كړى يې دكابل د برېښنا د تخنيک په څانګه كې پاى ته رسولي دي .
 دكابل په تخنيك ثانوي دپيښور په سيدجمال الدين اودميدان وردګو ولايت دخالد بن وليد په ليسو كي يې دفزيك اورياضياتو په څانګه كي ښوونه كړې، دغه راز دباختراطلاعاتي اژانس كي يي دسياسي مبصراوخبريال ،په راډيو افغانستان كي دنطاق ،دسولي اوجګړي نړيوال انستيتوت ، دملګروملتوپراختيايې ادارې ،دافغانستان سره دمرستودسمون ادارې اويوشميرنوروملي اونړيوالو څانګوكي يې دخبريالۍ اوليكوالۍ په برخه كي كاركړى په سل ګونه ليکني،خبرونه ، رپوټونه ،تبصرې اوشعرونه يې دهيواد په بيلابيلوورځپاڼو ،مجلو ،راډيواوتلويزيون او ويب پاڼو كې په پښتواودرى ژبو خپاره شوي . دهيلوغوټۍ په نامه لومړنۍ شعري ټولګه يي نوى خپره شوې  . دوه ټولنيز كتابونه يې ليكلي اودوه درسي كتابونه يې ژباړلي چې چاپ شوي نه دي . 
+
+== دندې ==
 دحقانيت جريده،مصباح اوونيزه،سيرت اوونيزه،ارادى ورځپاڼه،نامه زندگى جريده،داستقلال مجله،هيواد ورځپاڼه ،انيس ورځپاڼه،ارمان ورځپاڼه ،نونهالان مجله،قلم جريده...اونورې ګڼ شمېرچاپي خپرونې هغه خپرونې دي چې ده په كې دمسئول چلوونكي، دپاڼې چلووونكي ،اډيتراوقلمي همكار په توگه كار كړى . 
 
-<font size="3" face="Pashto Kror Asiatype" ">
 دغه راز يي  ليكنې په يوشميرملي اونړيوالو ويب پاڼو كي هم خپرې شوې دي . ښاغلى حقپال  همدااوس دافغانستان دجمهوري رياست دوياند اومطبوعاتوپه دفتركې ديوقراردادله مخې په كاربوخت دى . 
 
 
-<font size="3" face="Pashto Kror Asiatype" ">
-چاپ شوي اثار :
+== چاپ شوي اثار ==
 
- 
-
-<font size="3" face="Pashto Kror Asiatype" ">
 دهيلو غوټۍ               شعري ټولګه 
 
  
 
-<font size="3" face="Pashto Kror Asiatype" ">
-دشعر بېلګي :  
+== دشعر بېلګي ==
 
-<font size="3" face="Pashto Kror Asiatype" ">
 دمېړنـــــــــــو ټـــــــاټــــــــــــــــوبى
 
  
@@ -71,15 +68,6 @@
 
  
 
- 
-
- 
-
- 
-
- 
-
-<font size="3" face="Pashto Kror Asiatype" ">
 دپســــــــــــرلي وږمـــــــــــې
 
  
@@ -115,7 +103,7 @@
 
  
 
-<font size="3" face="Pashto Kror Asiatype" ">
+
 دوطن مينه
 
 
