--- a/محمد_زکريا_رازي.mw
+++ b/محمد_زکريا_رازي.mw
@@ -624,7 +624,7 @@ Pars Prior. Cahirae MCMXXXIX.
 [[es:Al-Razi]]
 [[fa:محمد زکریای رازی]]
 [[fi:Al-Razi]]
-[[fr:Abu Bakr Mohammad Ibn Zakariya al-Razi]]
+[[fr:Rhazès]]
 [[gd:Muhammad ibn Zakarīya Rāzi]]
 [[he:אל-ראזי]]
 [[hu:Abū Bakr Mohammed ibn Zakarīa al-Rāzi]]
