*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -26,6 +26,7 @@
 {{د-کارونکي-وخت}}
 <br><br>
 {{کارونکی-دافغانستان}}
+{{دم-ګړۍ}}
 <br>
 == د پښتو ويکيپېډيا د ليدنمخ (Interface) ژباړونکي ==
 [[مجاور احمد زيار|پوهاند مجاراحمدزيار]]<br>
