*Empty MediaWiki Message*

--- a/هستي_گل_عابد.mw
+++ b/هستي_گل_عابد.mw
@@ -1,3 +1,4 @@
+[[انځور:هستيګل_عابد.jpg|thumb|]]
 ښى لاسى تيد بالر دى
 د ١٩٨٤ کال د فبروري په ٩ نېټه په ننگرهار کې زيږيدلى دى
 هستي گل عابد له دولت خان احمدزي سره عمومآ په گډه د بالينگ پيل کوي .
@@ -14,4 +15,3 @@
 
 دۀ تر اوسه د ١٦.١٦ په اوسط ٣٦ لوبغاړي هم سوځولي چې تر ټولو غوره بالين يې د ١٧ منډو په بدل کې د درو لوبغاړو سوځول و .
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:هستيګل_عابد.jpg]]
