robot  Modifying: [[bg:Кундуз (провинция)]]

--- a/کندز_ولايت.mw
+++ b/کندز_ولايت.mw
@@ -34,8 +34,8 @@
 {{د افغانستان ولايتونه}}
 [[Category:افغانستان]]
 
-[[bg:Кундуз]]
 [[ar:ولاية كندوز]]
+[[bg:Кундуз (провинция)]]
 [[cs:Kunduz]]
 [[cy:Kunduz (talaith)]]
 [[de:Kundus (Provinz)]]
