--- a/مالي.mw
+++ b/مالي.mw
@@ -51,7 +51,7 @@
 |پېل ګڼ = 223
 |پېل ګڼ = 
 }}
-{{otheruses}}
+{{ژباړل}}
 
 '''Mali''', officially the '''Republic of Mali''' ([[French language|French]]: ''République du Mali'', [[Amazigh]]: [[Image:Mali_tifinagh.JPG]]), is a [[landlocked]] nation in [[West Africa|Western Africa]]. It is the second largest country among West African nations.  It borders [[الجېريا]] on the north, [[نايجېر]] on the east, [[بورکينا فاسو]] and the [[عاج ساحل]] on the south, [[ګونې]] on the south-west, and [[سېنېګال]] and [[ماوريتانيا]] on the west. Its straight borders on the north stretch into the centre of the [[Sahara]] desert, while the country's south, where the majority of inhabitants live, features the [[Niger river|Niger]] and [[Senegal river|Senegal]] rivers. Formerly [[French Sudan]], the country is named after the [[Empire of Mali]].  The name of the country comes from the [[Bambara language|Bambara]] word for [[hippopotamus]] and the animal appears on the Mali 5 franc coin.
 
