*Empty MediaWiki Message*

--- a/مادهوري_ډکشټ.mw
+++ b/مادهوري_ډکشټ.mw
@@ -7,3 +7,6 @@
 دبرياليتوب پېر: دسينما په لاركې تر لومړنيو پړاوونو وروسته ، دمادهوري د برياليتوب پړاو پيل شو، يارانه، راج كومار مه هانتا، پريم ګرانټ ، په سينمايي پيښليك كې ثبت شول، له سنجيدت سره ګډ رول مادهوري ته د ورځپاڼو او خپرونو غيږه پرانسته، دسنجيدت ښځې دعوه وكړه او دنوموړي د بيا تر لاسه كولو هڅه يې كوله. دكل نائيك " جويي كې پيچهى " د سنجيدت دمېرمنې غوسه نوره هم زياته كړه او دښځو له ټولنې يې وغوښتل ، چې پرمادهوري بنديز ولګوي او له سنجيدته لاس واخلي.تر كويلا وروسته " راكش روشن" په خپلو فلمونو كې د مادهوري پر زلميو رولونو بنديز و لګاوه، مادهوري پر دغه بنديز ددرنښت چوپتيا غوره كړه. پر 1377 كال مادهوري په " وجود" فلك كې راښكاره شوه، خو دغه فلم د " تېزاب" ريكارډ خوندي نه كړه او سړه بدرګه يې وشوه. په وروستيو كلونو كې مادهوري خپل هنري شهرت نور هم لوړ كړ، او نوره د هندي سينما پر سرخېلو ستورو كې حساب شوه.
 
 پېژندګلوي: د سينما دغه ښكلې نجلۍ په 1346لمريز كال د هند په ممبيي ښار كې خاپوړې كړې، پنځه فټه او څلور اېنچه ونه لري، وزن يې 51 كيلو ګرامو ته رسيږي، بريالى فلم يې " تېزاب" دى، په هندي هنرمندانو كې يې " نرګس" او " بلراج سهاني" او په بهرنيو كې يې " اينګرايډ پيرګمن" خوښيږي، ګنګ،جمنا او شعلې فلمونه ډېر ګوري، له مركو او ژورنالستانو بد وړي، ويسټن چرچل او اندرا ګاندي يې ايديال شخصيتونه دي. سنديا، جل مين مچهلي، نريترا مين بجلي، پدميني، هيلن، انتقام او نور يې غوره نڅاوې او نڅيز فلمونه دي. استاد مهوش؛ ژوند او هنر
+
+
+[[en:Madhuri Dixit]]
