*Empty MediaWiki Message*

--- a/سيد_محمد_امين_فاطمي.mw
+++ b/سيد_محمد_امين_فاطمي.mw
@@ -1,3 +1,7 @@
 [[Image:203x152.JPEG|thumb|289px|ډاکټر سيد محمد امين فاطمي]]
 ډاکټر سيد محمد امين فاطمي د مرحوم سيد ابرار پاچا زوی د عامې روغتيا وزير 
 له حضرت مجددي سره په اسلامي ملي جبهه کې و . دوی هم د مجاهدينو په جلاوطنه حکومت کې د عامې روغتيا د وزير په توګه کار کاوۀ .
+
+
+
+[[وېشنيزه:د افغانستان وزيران]]
