--- a/ژبه.mw
+++ b/ژبه.mw
@@ -113,6 +113,7 @@
 [[jv:Basa]]
 [[ka:ენა (მეტყველება)]]
 [[kg:Ndinga]]
+[[kl:Oqaatsit]]
 [[ko:언어]]
 [[ksh:Sprooch]]
 [[ku:Ziman]]
@@ -143,6 +144,7 @@
 [[pl:Język (mowa)]]
 [[pt:Linguagem]]
 [[qu:Rimay]]
+[[rm:Lingua]]
 [[rmy:Chhib]]
 [[ro:Limbă]]
 [[ru:Язык]]
