robot  Adding: [[an:O Cairo]]

--- a/قاهره.mw
+++ b/قاهره.mw
@@ -57,6 +57,7 @@ Image:CairoSouk.jpg|د يوه بازار منظره.
 [[af:Kaïro]]
 [[als:Kairo]]
 [[am:ካይሮ]]
+[[an:O Cairo]]
 [[ar:القاهرة]]
 [[arz:القاهرة]]
 [[az:Qahirə]]
