robot  Adding: [[ka:უგო ჩავესი]]

--- a/هوگو_چاوز.mw
+++ b/هوگو_چاوز.mw
@@ -1262,6 +1262,7 @@ Chávez is of [[Roman Catholic Church|Roman Catholic]] extraction, and is curren
 [[is:Hugo Chávez]]
 [[it:Hugo Chávez]]
 [[ja:ウゴ・チャベス]]
+[[ka:უგო ჩავესი]]
 [[kk:Чавес, Уго]]
 [[ko:우고 차베스]]
 [[la:Hugo Chávez]]
