*Empty MediaWiki Message*

--- a/ډنمارک.mw
+++ b/ډنمارک.mw
@@ -125,22 +125,22 @@ The [[Death sentence|death sentence]] was abolished in Denmark in 1930.  It was 
 Denmark is divided into 13 [[county|counties]] (''[[Amt (subnational entity)|amter]]'', singular: ''amt''), and 271 [[Municipalities of Denmark|municipalities]] (''[[Commune (subnational entity)|kommuner]]'', singular ''kommune''). Three municipalities have county privileges - Copenhagen, Frederiksberg, and Bornholm. The coming Danish Municipal Reform will replace the counties with five new [[Regions of Denmark|regions]] and reduce the number of municipalities to 98. The new municipalities will take over most of the responsibilities of the former counties. Most of the new municipalities will have a population of at least 20,000 people. The reform will be implemented on [[1 January]] [[2007]].
 [[Image:DenmarkNumbered.png|right|250px]]
 
-# [[Copenhagen]] (København) (municipality)
-# [[Frederiksberg]] (municipality)
-# [[Copenhagen County|Copenhagen]] ''(København)''
-# [[Frederiksborg County|Frederiksborg]]
-# [[Roskilde County|Roskilde]]
-# [[West Zealand County|West Zealand]] ''(Vestsjælland)''
-# [[Storstrøm County|Storstrøm]]
-# [[Funen County|Funen]] ''(Fyn)''
-# [[South Jutland County|South Jutland]] ''(Sønderjylland)''
-# [[Ribe County|Ribe]]
-# [[Vejle County|Vejle]]
-# [[Ringkjøbing County|Ringkjøbing]]
-# [[Viborg County|Viborg]]
-# [[North Jutland County|North Jutland]] ''(Nordjylland)''
-# [[Aarhus County|Aarhus]] ''(Århus)''
-# [[Bornholm]] (regional municipality)
+۱) کوپنهاګن(کمون)
+۲)فریدریکسبیرګ( کمون)
+۳)کوپنهاګ
+۴)فریدریکسبورګ
+۵)غوسکیله
+۶)ویسټ زیلینډ (ویسټ شیلنډ)
+۷)سټوراستروم
+۸)فونن (فوین)
+۹)صوت یوټلنډ (سوندریولنډ)
+۱۰) غیبه
+۱۱) وایله
+۱۲)رینګکوبینګ
+۱۳) ویبورګ
+۱۴)نورت یولنډ
+۱۵)آروس
+۱۶)بورنهولم
 
 Copenhagen County comprises the municipalities of metropolitan Copenhagen, except Copenhagen Municipality and Frederiksberg Municipality. Bornholm Regional Municipality comprise the five former municipalities on the island Bornholm and the island's former county.
 
