*Empty MediaWiki Message*

--- a/ډنمارک.mw
+++ b/ډنمارک.mw
@@ -126,20 +126,35 @@ Denmark is divided into 13 [[county|counties]] (''[[Amt (subnational entity)|amt
 [[Image:DenmarkNumbered.png|right|250px]]
 
 ۱) کوپنهاګن(کمون)
+
 ۲)فریدریکسبیرګ( کمون)
+
 ۳)کوپنهاګ
+
 ۴)فریدریکسبورګ
+
 ۵)غوسکیله
+
 ۶)ویسټ زیلینډ (ویسټ شیلنډ)
+
 ۷)سټوراستروم
+
 ۸)فونن (فوین)
+
 ۹)صوت یوټلنډ (سوندریولنډ)
-۱۰) غیبه
+
+۱۰) ریبه
+
 ۱۱) وایله
+
 ۱۲)رینګکوبینګ
+
 ۱۳) ویبورګ
+
 ۱۴)نورت یولنډ
+
 ۱۵)آروس
+
 ۱۶)بورنهولم
 
 Copenhagen County comprises the municipalities of metropolitan Copenhagen, except Copenhagen Municipality and Frederiksberg Municipality. Bornholm Regional Municipality comprise the five former municipalities on the island Bornholm and the island's former county.
