--- a/ډنمارک.mw
+++ b/ډنمارک.mw
@@ -129,7 +129,7 @@ Denmark is divided into 13 [[county|counties]] (''[[Amt (subnational entity)|amt
 
 ۲)فریدریکسبیرګ( کمون)
 
-۳)کوپنهاګ
+۳)کوپنهاګن
 
 ۴)فریدریکسبورګ
 
