--- a/ويکيپېډيا.mw
+++ b/ويکيپېډيا.mw
@@ -15,7 +15,7 @@ When ''[[Time (magazine)|Time]]'' magazine recognized "[[You (Time Person of the
 ==تاريخ==
 {{main|د ويکيپېډيا تاريخ}}
 [[انځور:Nupedia.jpg|thumb|250px|په اصل کې ويکيپېډيا د پوهنغونډ د يوې بلې پروژې، [[نيوپېډيا]] نه رامېنځ ته شو.]]
-ويکيپېډيا د [[نيوپېډيا]] د يو بشپړه کوونکې پروژې په توګه په کار پيل وکړ. , دا په [[انګرېزي ژبه]] د پوهنغونډ يوه پروژه وه چې د دغې پروژې ليکنې د تجربه کارو ليکوالانو لخوا ليکل کېدل او د يوې رسمي مخکتنې د پروسې نه تېرېدل. د نيوپېډيا بنسټ په ۹ د مارچ ۲۰۰۰ کال کې د [[بوميس]] مالکيت، د وېب پورټالونو يوې کمپنۍ لخوا کېښودل شو. Its main figures were [[Jimmy Wales]], Bomis [[Chief executive officer|CEO]], and [[Larry Sanger]], [[Editing|editor-in-chief]] for Nupedia and later Wikipedia. Nupedia was licensed initially under its own [[Nupedia Open Content License]], switching to the [[GNU Free Documentation License]] before Wikipedia's founding at the urging of [[Richard Stallman]].<ref name="stallman1999">{{cite web
+ويکيپېډيا د [[نيوپېډيا]] د يو بشپړه کوونکې پروژې په توګه په کار پيل وکړ. , دا په [[انګرېزي ژبه]] د پوهنغونډ يوه پروژه وه چې د دغې پروژې ليکنې د تجربه کارو ليکوالانو لخوا ليکل کېدل او د يوې رسمي مخکتنې د پروسې نه تېرېدل. د نيوپېډيا بنسټ په ۹ د مارچ ۲۰۰۰ کال کې د [[بوميس]] مالکيت، د وېب پورټالونو يوې کمپنۍ لخوا کېښودل شو. د دغه بنسټ، چې وروسته په ويکيپېډيا بدل شو، اصلي غړي [[جيمي وېلز]]، بوميس [[Chief executive officer|CEO]], او [[لېري سانګر]]، وه. په پېل کې نيوپېډيا د نيوپېډيا د پرانيستې مېنځپانګې د لايسنس د اجازې لاندې کار کاوه چې د ويکيپېډيا د بنسټ ايښودلو نه مخکې د [[ريچارډ سټالمېن]] په غوښتنه يې نوم [[د جي ان يو د وړيا لاسوندونو لايسنس]] واړاوه.<ref name="stallman1999">{{cite web
 |url=http://www.gnu.org/encyclopedia/encyclopedia.html
 |title=The Free Encyclopedia Project
 |accessdate=2008-01-04
@@ -25,9 +25,9 @@ When ''[[Time (magazine)|Time]]'' magazine recognized "[[You (Time Person of the
 |date=2007-06-20
 |publisher=[[Free Software Foundation]]}}</ref>
 
-[[Image:Jimmy-wales-frankfurt2005-alih01.jpg|left|100px|thumb|Jimmy Wales]]
-[[Image:L Sanger.jpg|thumb|right|100px|Larry Sanger]]
-Larry Sanger and Jimmy Wales are the founders of Wikipedia.<ref name="foundercontroversy"/><ref name="Sanger-NYTimes">
+[[Image:Jimmy-wales-frankfurt2005-alih01.jpg|left|100px|thumb|جيمي وېلز]]
+[[Image:L Sanger.jpg|thumb|right|100px|لېري سانګر]]
+لېري سانګر او جېمي وېلز د ويکيپېډيا بنسټ ايښودونکي دي.<ref name="foundercontroversy"/><ref name="Sanger-NYTimes">
 {{cite news
 |first=Peter
 |last=Meyers
