--- a/ويکيپېډيا.mw
+++ b/ويکيپېډيا.mw
@@ -39,7 +39,7 @@ When ''[[Time (magazine)|Time]]'' magazine recognized "[[You (Time Person of the
 Wikipedia was formally launched on [[January 15]] [[2001]], as a single English-language edition at www.wikipedia.com,<ref>{{cite web |url=http://web.archive.org/web/20010331173908/http://www.wikipedia.com/ |title=Wikipedia: HomePage |accessdate= 2001-03-31}}</ref> and announced by Sanger on the Nupedia mailing list.<ref>{{cite news |author=[[Larry Sanger]] |title=Wikipedia is up! |date=[[January 17]] [[2001]] |publisher=Internet Archive |url=http://web.archive.org/web/20010506042824/www.nupedia.com/pipermail/nupedia-l/2001-January/000684.html}}</ref>
 Wikipedia's policy of "neutral point-of-view"<ref name="NPOV">"[http://en.wikipedia.org/w/index.php?title=Wikipedia:Neutral_point_of_view&oldid=102236018 Wikipedia:Neutral point of view], Wikipedia (21 January 2007)</ref> was codified in its initial months, and was similar to Nupedia's earlier "nonbiased" policy. Otherwise, there were relatively few rules initially and Wikipedia operated independently of Nupedia.<ref name="SangerMemoir">{{cite news |author=[[Larry Sanger]] |title=The Early History of Nupedia and Wikipedia: A Memoir|date=[[April 18]] [[2005]] |publisher=[[Slashdot]] |url=http://features.slashdot.org/features/05/04/18/164213.shtml}}</ref>
 
-[[Image:EnglishWikipediaArticleCountGraph linear.png‎|thumb|right|Graph of the article count for the English Wikipedia, from January 10, 2001, to September 9, 2007 (the date of the two-millionth article).]] Wikipedia gained early contributors from Nupedia, [[Slashdot]] postings, and [[Web search engine|search engine]] indexing. It grew to approximately 20,000 articles, and 18 language editions, by the end of 2001. By late 2002 it had reached 26 language editions, 46 by the end of 2003, and 161 by the closing stages 2004.<ref>"[http://en.wikipedia.org/wiki/Wikipedia:Multilingual_statistics Multilingual statistics]", Wikipedia, [[March 30]] [[2005]]</ref> Nupedia and Wikipedia coexisted until the former's servers went down permanently in 2003, and its text was incorporated into Wikipedia. As of December 2007, English Wikipedia had over 2 million articles, making it the largest encyclopedia ever assembled, eclipsing even the [[Yongle Encyclopedia]] (1407), which had held the record for nearly 600 years.<ref name="EB_encyclopedia">{{cite encyclopedia |title=Encyclopedias and Dictionaries |encyclopedia=Encyclopædia Britannica, 15th ed. |publisher= Encyclopædia Britannica |date=2007 |volume=18 |pages=257–286}}</ref>
+[[Image:EnglishWikipediaArticleCountGraph linear.png‎|thumb|left|د انګرېزي ويکيپېډيا د ليکنو د شمېر ګراف، له ۱۰ د جنوري، ۲۰۰۱ تر ۹ د سېپتمبر ۲۰۰۷ کال (د ۲ ميليونو ليکنو بريد ته د رسېدو نېټه).]] Wikipedia gained early contributors from Nupedia, [[Slashdot]] postings, and [[Web search engine|search engine]] indexing. It grew to approximately 20,000 articles, and 18 language editions, by the end of 2001. By late 2002 it had reached 26 language editions, 46 by the end of 2003, and 161 by the closing stages 2004.<ref>"[http://en.wikipedia.org/wiki/Wikipedia:Multilingual_statistics Multilingual statistics]", Wikipedia, [[March 30]] [[2005]]</ref> Nupedia and Wikipedia coexisted until the former's servers went down permanently in 2003, and its text was incorporated into Wikipedia. As of December 2007, English Wikipedia had over 2 million articles, making it the largest encyclopedia ever assembled, eclipsing even the [[Yongle Encyclopedia]] (1407), which had held the record for nearly 600 years.<ref name="EB_encyclopedia">{{cite encyclopedia |title=Encyclopedias and Dictionaries |encyclopedia=Encyclopædia Britannica, 15th ed. |publisher= Encyclopædia Britannica |date=2007 |volume=18 |pages=257–286}}</ref>
 
 Citing fears of commercial advertising and lack of control in a perceived English-centric Wikipedia, users of the [[Spanish Wikipedia]] forked from Wikipedia to create the ''[[Enciclopedia Libre]]'' in February 2002. Later that year, Wales announced that Wikipedia would not display advertisements, and its website was moved to wikipedia.org. Various other projects have since forked from Wikipedia for editorial reasons. [[Wikinfo]] does not require neutral point of view and allows original research. New Wikipedia-inspired projects — such as [[Citizendium]], [[Scholarpedia]], [[Amapedia]] and Google's [[Knol]] — have been started to address perceived limitations of Wikipedia, such as its policies on [[peer review]], [[original research]] and commercial [[advertising]].
 
