--- a/د_موسم_بدلون.mw
+++ b/د_موسم_بدلون.mw
@@ -11,3 +11,6 @@ In recent usage, especially in the context of environmental policy, climate chan
 == د اقليم د بدلون لاملونه ==
 
 Climate Change is the result of a great many factors including; the dynamic processes of the Earth itself, external forces including variations in sunlight intensity, and more recently by human activities. External factors that can shape climate are often called climate forcings and include such processes as variations in solar radiation, deviations in the Earth's orbit, and the level of greenhouse gas concentrations.
+
+
+[[en:Climate Change]]
