*Empty MediaWiki Message*

--- a/د_موسم_بدلون.mw
+++ b/د_موسم_بدلون.mw
@@ -1,6 +1,8 @@
 ==  اقليمي بدلون (د هوا د تودوخې اوږدمهاله بدلون) ==
 اقليمي بدلون (اوږد مهاله د تودوخې بدلون ) د پام وړ اوږدمهاله د هوا بدلون دی چې  په يو ځانګړي ځای کې د منځوۍ هوا ددرجې اټکل کوي ، (يا په منځمهاله(موقته) توګه په ټولنه کې د سياسي تحولاتو په اړوند د ټولې ځمکې اندښنې او اغېزې رااخلي ) دا د پام وړ بدلون په ټاکلې مودې کې راښيي.
 د اقليم بدلون د ځمکې په اټکل شوي ماحول باندې په غير نورماله توګه توپيري اغېزې پرېږدي . او همداسې راوروسته بدلونونه ېې د ځمکې په نورو برخو هم اغېزه اچوي ، لکه د سيند کنګل چې د لسيزو نه نيولې بيا تر ميلونونو کلنو پورې ېې د دوام لړۍ اټکلېدی شي.
+
+په دې نژدو کې په ځانګړې توګه د چاپېريالي پاليسۍ په چوکاټ کې د اقليمي بدلون مانا له (نړېوالې تودوخې) سره ورته کارېږي. 
  
 
 Climate change is any long-term significant change in the expected patterns of average weather of a specific region (or, more relevantly to contemporary socio-political concerns, of the Earth as a whole) over an appropriately significant period of time. Climate change reflects abnormal variations to the expected climate within the Earth's atmosphere and subsequent effects on other parts of the Earth, such as in the ocean's ice caps over durations ranging from decades to millions of years.
