robot  Modifying: [[hy:Կահիրե]]

--- a/قاهره.mw
+++ b/قاهره.mw
@@ -97,7 +97,7 @@ Image:CairoSouk.jpg|د يوه بازار منظره.
 [[hr:Kairo]]
 [[ht:Li Kè]]
 [[hu:Kairó]]
-[[hy:Կահիրա]]
+[[hy:Կահիրե]]
 [[id:Kairo]]
 [[io:Kairo]]
 [[is:Kaíró]]
