*Empty MediaWiki Message*

--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -7,3 +7,14 @@
 * رېټېنول، دا د وېټامين اې هغه بڼه ده چې د حېواني خواړو د سرچينې نه راجذبېږي، دا يو زېړ رنګه، په غوړو کې حل کېدونکی وېټامين دی چې د سترګو په ليد کې او د هډوکو په وده کې ډېرې اهمه دنده لري. دا چې د دغې ډلې الکولي بڼه ناثابته ده نو په همدې خاطر اکثراً همدا وېټامين د ريټانيل اسېټېټ يا پالمټېټ په بڼه کې توليدېږي او د کارولو وړ ګرځي.
 
 * نور رېټنايډونه د يو ډول کيميايي تړنګونو د ټولګي نه دي چې په کيميايي توګه ويټامين اې سره اړيکې لري او دا مرکبونه په طبابت کې کارېږي.
+
+
+
+
+
+
+
+
+
+
+[[en:Vitamin A]]
