--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -1,5 +1,5 @@
 [[انځور:Retinol structure.svg|کيڼ|thumb|360px|د ريټانول جوړښتبڼه، په خواو کې د وېټامين اې تر ټولو عامه بڼه]]
-'''ويټامين اې''' يو دوه قطبي ماليکيول دی چې د کاربون او هايډروجن تر مېنځ يو دوه قطبي کوولنټ بانډ دی لري. دا د هم بڼو ماليکيولونو د کورنۍ، رېټنايډز سری تړلی دی. رېټنايډز د دغه وېټامين پاتې سلسله بشپړه کوي. د رېټنايډز اهمه برخه د ريټانيل ډله ده چې په ګڼو بڼو موندل کېږي. د حيواني اصل نه جوړو خواړو کې د وېټامين اې لويه برخه يو اېسټز، يو لومړنی ريټانيل پالميټېټ دی چې په وړه کولمه کې په الکول (ريټينول) بدلېږي. ويټامين اې د يو الډهيډ (ريټينال) په بڼه او يا هم د يو اسيد (ريټينوېک اسيد) په توګه هم وي. د دې وېټامين مختلوني (پرووېټامينونه) د بوټو نه لاس ته راغلو خوړو کې دي لکه هغه بوټي چې د کاروټېنويډ د کورنۍ په تړنګونو پورې تړاو لري شته.
+'''ويټامين اې''' يو دوه قطبي ماليکيول دی چې د کاربون او هايډروجن تر مېنځ يو دوه قطبي کوولنټ بانډ دی لري. دا د هم بڼو ماليکيولونو د کورنۍ، رېټنايډز سری تړلی دی. رېټنايډز د دغه وېټامين پاتې سلسله بشپړه کوي. د رېټنايډز اهمه برخه د ريټانيل ډله ده چې په ګڼو بڼو موندل کېږي. د حيواني اصل نه جوړو خواړو کې د وېټامين اې لويه برخه يو اېسټز، يو لومړنی ريټانيل پالميټېټ دی چې په وړه کولمه کې په الکول (ريټينول) بدلېږي. ويټامين اې د يو الډهيډ (ريټينال) په بڼه او يا هم د يو اسيد (ريټينوېک اسيد) په توګه هم وي. د دې وېټامين مختلوني (پرووېټامينونه) د بوټو نه لاس ته راغلو خوړو کې دي لکه هغه بوټي چې د کاروټېنويډ د کورنۍ په تړنګونو پورې تړاو لري شته.<ref name="encyclo"> Carolyn Berdanier. 1997. Advanced Nutrition Micronutrients. pp 22-39</ref>
 
 د ويټامين اې هر ډول بڼه د بيټا آيونون يوه کړۍ لري چې همدغې کړۍ سره د آيسوپرېنويډ زنځير تړلی دی. دا جوړښت د وېټامين اې په کړنو کې ډېر ضروري دی. د ګازرو نارنجي زېړ رنګ بيټا کاروټين نومېږي. دا رنګ د دوه ريټانيل ډلې د د خپلمنځي نښلون په توګه راڅرګند شوی چې په بدن کې د ويټامين اې د کچې په لوړولو کې مرسته کوي. کله چې د ريټانيل ډله د يو ډول ځانګړي پروټين سره ونښلي بيا همدا د ليدنې د حس په درک کې لومړنۍ نور جذبونکې ماده ده او په همدې توګه د دغه مرکب نوم د سترګې د ريټينا سره هم اړيکې لري.
 
@@ -7,7 +7,7 @@
 
 * رېټېنول، دا د وېټامين اې هغه بڼه ده چې د حېواني خواړو د سرچينې نه راجذبېږي، دا يو زېړ رنګه، په غوړو کې حل کېدونکی وېټامين دی چې د سترګو په ليد کې او د هډوکو په وده کې ډېرې اهمه دنده لري. دا چې د دغې ډلې الکولي بڼه ناثابته ده نو په همدې خاطر اکثراً همدا وېټامين د ريټانيل اسېټېټ يا پالمټېټ په بڼه کې توليدېږي او د کارولو وړ ګرځي.
 
-* نور رېټنايډونه د يو ډول کيميايي تړنګونو د ټولګي نه دي چې په کيميايي توګه ويټامين اې سره اړيکې لري او دا مرکبونه په طبابت کې کارېږي.
+* نور رېټنايډونه د يو ډول کيميايي تړنګونو د ټولګي نه دي چې په کيميايي توګه ويټامين اې سره اړيکې لري او دا مرکبونه په طبابت کې کارېږي.<ref> [http://www.cancer.org/docroot/CRI/content/CRI_2_4_4x_Retinoid_Therapy.asp?sitearea= American Cancer Society: Retinoid Therapy]</ref>
 
 
 
