/* نوټ او سرچینې */

--- a/د_حماس_اسلامي_غورځنگ.mw
+++ b/د_حماس_اسلامي_غورځنگ.mw
@@ -300,7 +300,7 @@ in a recent poll [http://pewglobal.org/reports/display.php?ReportID=256] "About 
 * [http://news.yahoo.com/s/ap/20070424/ap_on_re_mi_ea/israel_palestinians]  Hamas militants fire rockets at Israel
 
 == نوټ او سرچینې ==
-<div class="references-small" style="-moz-column-count:2; column-count:2;">{{Reflist|2}}</div>
+<div class="references-small" style="-moz-column-count:2; column-count:2;">{{Reflist}}</div>
 
 == بهرنې تړن==
 {{Wikiquote}}
