--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -7,6 +7,8 @@
 
 == زده کړې ==
 زده کړه يې تر څلورم ټولګي پورې کړې، خو په ليک لوست ډېر ښه پوهيږي.
+له ماشومتوبه يي د ورځپاڼوله لوستلوسره مينه پيداشوه اوتل به يي لوستلې . تر دې چې ليکل اولوستل يي پوره پکې زده کړل او بيا خو يي وروسته حتى مقالې ورته ليکلې .
+
 == دندې ==
 
 == چاپ شوي آثار ==
